Fix vertical spacing of Bmail desktop.

--- a/scss/partials/_cmail.scss
+++ b/scss/partials/_cmail.scss
@@ -556,7 +556,7 @@ div.cmail-outer {
       height: auto;
       width: 640px;
       margin: 0 auto;
-      padding: 32px 0 18px;
+      padding: 66px 0 18px;
       min-height: 100%;
       max-height: unset;
       overflow-x: auto;
@@ -622,7 +622,7 @@ div.cmail-outer {
 
       div.cmail-content-abstract-container {
         margin: 24px 0 0;
-        padding: 0 0 16px 32px;
+        padding: 0 0 32px 0;
         border-bottom: 1px solid $ultra_light_grey;
         position: relative;
 
